<resources>
    <string name="app_name">Elatheer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="service">Service</string>
    <string name="offer">Offer</string>
    <string name="call">Call </string>
    <string name="home">Home</string>

    <string name="name">Your Name</string>
    <string name="mail">Your Mail</string>
    <string name="phone">Your Phone</string>
    <string name="message">Leave Your Message</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="send">SEND</string>
    <string name="callus">Call Us</string>



    <string name="PutIdia">Put Title Your Idea</string>
    <string name="eshrahIdia">Explan Your Idea</string>
    <string name="UploadImage">UpLoad Image</string>
    <string name="addIdea">Add New Idea</string>
    <string name="someIdea">Some Ideas</string>

    <string name="book">Book</string>
    <string name="details">Details</string>
    <string name="intro1">screen1</string>
    <string name="intro2">screen1</string>
    <string name="intro3">screen1</string>
    <string name="intro4">screen1</string>
    <string name="intro5">screen1</string>
    <string name="home1">الرئيسيه</string>
    <string name="home2">الرئيسيه</string>
    <string name="home3">الرئيسيه</string>
    <string name="home4">الرئيسيه</string>
    <string name="home5">الرئيسيه</string>

</resources>
