<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/service"
        android:checked="true"
        android:icon="@drawable/service"
        android:title="@string/service"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/offer"
        android:checked="false"
        android:icon="@drawable/offer"
        android:title="@string/offer"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/call"
        android:checked="false"
        android:icon="@drawable/call"
        android:title="@string/call"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/home"
        android:checked="false"
        android:icon="@drawable/home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
</menu>