<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/amber_400"
    tools:context="com.example.elashry.elatheer.CallUs">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/amber_400"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_gravity="center"
            android:paddingLeft="27dp"
            android:paddingRight="27dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"

            android:text="اتصل بنا"
            android:textColor="@color/amber_400"
            android:background="@drawable/blubuttom"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/Card"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="#efefef"
                cardview:cardCornerRadius="2dp"
                cardview:cardElevation="3dp"
                cardview:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="10dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="5dp"
                    android:background="@color/colorPrimary"
                    >


                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/text"
                        android:hint="@string/name"
                        android:paddingBottom="5dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:paddingTop="5dp"
                        android:textColorHint="@color/colorPrimary" />

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/text"
                        android:hint="@string/phone"
                        android:paddingBottom="5dp"
                        android:inputType="phone"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:paddingTop="5dp"
                        android:textColorHint="@color/colorPrimary" />

                    <EditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/text"
                        android:hint="@string/mail"
                        android:inputType="textEmailAddress"
                        android:paddingBottom="5dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:paddingTop="5dp"
                        android:textColorHint="@color/colorPrimary" />

                    <EditText
                        android:id="@+id/massege"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:minLines="3"
                        android:textAlignment="gravity"
                        android:gravity="top"
                        android:hint="@string/message"
                        android:textColorHint="@color/colorPrimary"
                        android:background="@drawable/text"/>



                    <Button
                        android:id="@+id/btnWithText"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:textColor="@color/amber_400"
                        android:textSize="18sp"
                        android:layout_gravity="center"
                        android:text="ارسال"

                        android:background="@drawable/btnsend"
                      />

                </LinearLayout>


            </android.support.v7.widget.CardView>
        </ScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">


            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/facebook"
                android:layout_margin="10dp"/>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:src="@drawable/twitter"/>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:src="@drawable/chat"/>

        </LinearLayout>




    </LinearLayout>

</RelativeLayout>
